--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,12 @@
   
 .App{
-  min-height: 100vh;
   background-image: linear-gradient(to top, #feada6 0%, #f5efef 100%);
 }
 
 
 .titleimg {
-  height: 300px;
-  width: 100%;
+  height: 20vw;
+  width: auto;
   display: flex;
   justify-content: center;
   background-color: black;
