--- a/src/husband.module.css
+++ b/src/husband.module.css
@@ -1,17 +1,7 @@
-.husbandContainer {
-        border-radius: 10px;
-        box-shadow: 0px 5px 20px rgb(71, 71, 71);
-        margin: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        background: white;
-        align-items: center;
-        min-width: 40px;
-}
+
 
 .husband {
-    width: 12%;
+    width: 15vw;
     height: auto;
     display: flex;
     justify-content: left;
@@ -21,9 +11,12 @@
 }
 
 .radioButton {
-        border: none;
-        display: flex;
-        justify-content: center;
+    border: none;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    color: white;
 
 }
 
@@ -37,3 +30,20 @@
     color: white;
 
 }
+
+.husbandContainer {
+    min-height: 50vw;
+    width: 50vw;
+    border-radius: 10px;
+    box-shadow: 0px 5px 20px rgb(71, 71, 71);
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background: white;
+    align-items: center;
+  } 
+
+/* .active {
+    opacity: 0;
+} */
