--- a/src/husband.module.css
+++ b/src/husband.module.css
@@ -4,7 +4,6 @@
     width: 15vw;
     height: auto;
     display: flex;
-    justify-content: left;
     border: 1px solid rgb(143, 31, 31);
     border-radius: 25px;
     box-shadow: 2px 2px;
@@ -19,7 +18,6 @@
     color: white;
 
 }
-
 
 .submitButton {
     border: none;
@@ -43,6 +41,12 @@
     background: white;
     align-items: center;
   } 
+
+  .response {
+    font-family: Arial;
+    font-size: 14px;
+    font-weight: bold;
+  }
 
 /* .active {
     opacity: 0;
